# medal-tv-rs

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
examples/: get_all_clips.rs
src/: error.rs  lib.rs  medal.rs
src/api/latest/: latest_payload.rs  latest_payload_builder.rs  latest_response.rs  mod.rs
tests/: temp.rs
