[package]
name = "medal-tv-rs"
version = "0.0.1"
edition = "2021"
rust-version = "1.77"
authors = ["Todd Everett Griffin <toddgriffin@protonmail.com>"]
repository = "https://github.com/goddtriffin/medal-tv-rs"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library for the medal.tv REST API."
license-file = "LICENSE"
keywords = ["Todd", "Everett", "Griffin", "medal", "tv"]
categories = ["web-programming", "api-bindings"]
exclude = [
    ".idea/*",
    ".github/*",
]

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[lints.clippy]
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "allow", priority = 1 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[dependencies]
# tracing
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18",  features=["env-filter"]}

# tokio
tokio = { version = "1.37.0", features = ["full"] }

# http request
reqwest = { version = "0.12.2", default-features = false, features = [ "json", "rustls-tls" ] }
bytes = "1.6.0"

# serde
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
